# AirSim

./: .gitignore  README.md  setup.sh
AirLib/include/api/: RpcLibAdapatorsBase.hpp  RpcLibClientBase.hpp  WorldSimApiBase.hpp
AirLib/include/common/: AirSimSettings.hpp  CommonStructs.hpp
AirLib/include/physics/: PhysicsWorld.hpp
AirLib/src/api/: RpcLibClientBase.cpp  RpcLibServerBase.cpp
PythonClient/airsim/: client.py
PythonClient/multirotor/: add_drone.py
Unity/: build.sh
Unity/AirLibWrapper/AirsimWrapper/Source/: WorldSimApi.cpp  WorldSimApi.h
Unreal/Plugins/AirSim/Source/: AirBlueprintLib.cpp  AirBlueprintLib.h  PawnSimApi.cpp  WorldSimApi.cpp  WorldSimApi.h
Unreal/Plugins/AirSim/Source/SimMode/: SimModeBase.cpp  SimModeBase.h  SimModeWorldBase.cpp  SimModeWorldBase.h
docs/: apis_cpp.md
ros/src/mesh_info/: .gitignore  CMakeLists.txt  package.xml
ros/src/mesh_info/launch/: mesh_info.launch
ros/src/mesh_info/src/: mesh_info_node.cc
tools/: install_ros_deps.sh
