<?xml version="1.0"?>
<package>
  <name>mesh_info</name>
  <version>0.0.0</version>
  <description>The mesh_info package</description>

  <maintainer email="mavscout@todo.todo">mavscout</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roslib</run_depend>


  <export>
  </export>
</package>
